pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/factory/map-default.ub
factory: {
  inputs: {
    tags: {
      type: map(string)
      default: {
        env: 'prod'
        env: 'stage'
      }
    }
  }
}
